scripts/nullaway/wpi/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8.txt
../wpi/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:222: error: [NullAway] dereferenced expression _subStacks.get(_subStacks.keySet().toArray()[0]) is @Nullable
            return _subStacks.get(_subStacks.keySet().toArray()[0]).toString();
                                                                   ^
    (see http://t.uber.com/nullaway )
../wpi/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Game.java:81: error: [NullAway] dereferenced expression _sides.get(side) is @Nullable
        if ((!_setupComplete) && _sides.get(side).addPlayer(name, nationality, entryTurn)) {
                                                 ^
    (see http://t.uber.com/nullaway )
../wpi/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Game.java:97: error: [NullAway] dereferenced expression _sides.get(side) is @Nullable
        return _sides.get(side).player(name);
                               ^
    (see http://t.uber.com/nullaway )
../wpi/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Game.java:108: error: [NullAway] dereferenced expression _sides.get(Side.Sides.ALLIES) is @Nullable
        _alliedPlayers.addAll(_sides.get(Side.Sides.ALLIES).playerList());
                                                           ^
    (see http://t.uber.com/nullaway )
../wpi/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Game.java:110: error: [NullAway] dereferenced expression _sides.get(Side.Sides.AXIS) is @Nullable
        _axisPlayers.addAll(_sides.get(Side.Sides.AXIS).playerList());
                                                       ^
    (see http://t.uber.com/nullaway )
5 errors
